FIXED: CARDS container and added flex-wrap to fit in small screens

--- a/src/Components/Card/card.css
+++ b/src/Components/Card/card.css
@@ -1,4 +1,5 @@
 .card-container {
+  width: 18rem;
   display: flex;
   flex-direction: column;
   background-color: #95dada;
